fix shape of features in nlp xg

--- a/neural_networks.ipynb
+++ b/neural_networks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,8 @@
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "from pytorch_tabnet.tab_model import TabNetClassifier\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "pd.set_option(\"display.max_colwidth\", None)\n",
@@ -246,8 +248,6 @@
     }
    ],
    "source": [
-    "from pytorch_tabnet.tab_model import TabNetClassifier, TabNetRegressor\n",
-    "\n",
     "clf = TabNetClassifier()\n",
     "clf.fit(\n",
     "  X_train.values, y_train,\n",
