--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,33 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = train_prep.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data = train_prep.copy()\n",
+    "\n",
     "features = data.drop('type', axis=1)\n",
     "labels = data.type\n",
     "# at least xgboost cannot deal with string labels\n",
     "label_encoder = LabelEncoder()\n",
     "label_encoder = label_encoder.fit(labels)\n",
-    "labels = label_encoder.transform(labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "labels = label_encoder.transform(labels)\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)"
    ]
   },
@@ -153,38 +139,45 @@
     "\n",
     "# Define sweep config\n",
     "sweep_configuration = {\n",
-    "    'method': 'random',\n",
+    "    'method': 'bayes',\n",
     "    'name': 'sweep',\n",
     "    'metric': {'goal': 'maximize', 'name': 'val_acc'},\n",
     "    'parameters': \n",
     "    {\n",
-    "        'est': {'values': [10, 100, 1000]},\n",
-    "        'depth': {'values': [5, 10, 15]},\n",
+    "        'split': {'values': [2, 5, 10, 100]},\n",
+    "        'depth': {'values': [3, 6, 10, 50, 100, 1000]},\n",
+    "        'leaf': {'values': [2, 6, 10, 50, 100, 1000, 5000]},\n",
+    "        'estimators': {'values': [200, 500, 1000, 2000]},\n",
+    "        'features': {'values': [None, 'sqrt', 'log2']},\n",
+    "\n",
     "     }\n",
     "}\n",
     "\n",
+    "project = 'rf'\n",
     "# Initialize sweep by passing in config. (Optional) Provide a name of the project.\n",
-    "sweep_id = wandb.sweep(sweep=sweep_configuration, project='sweep')\n",
+    "sweep_id = wandb.sweep(sweep=sweep_configuration, project=project)\n",
     "\n",
     "def main():\n",
-    "    run = wandb.init(project=\"sweep\")\n",
+    "    run = wandb.init(project=project)\n",
     "\n",
     "    # note that we define values from `wandb.config` instead \n",
     "    # of defining hard values \n",
-    "    est = wandb.config.est\n",
+    "    split = wandb.config.split\n",
     "    depth = wandb.config.depth\n",
+    "    leaf = wandb.config.leaf\n",
+    "    estimators = wandb.config.estimators\n",
+    "    feat = wandb.config.features\n",
+    "    \n",
     "\n",
     "    # -------------------------- usual training code starts here  -------------------------------------\n",
-    "\n",
-    "    rfc = RandomForestClassifier(n_estimators=est, max_depth=depth, random_state=0)\n",
+    "    \n",
+    "    rfc = RandomForestClassifier(n_estimators=estimators, max_depth=depth, min_samples_leaf=leaf, max_features=feat, min_samples_split=split, random_state=42)\n",
     "    rfc.fit(X_train, y_train)\n",
     "\n",
     "    y_pred = rfc.predict(X_test)\n",
-    "    probs = rfc.predict_proba(X_test)\n",
     "    val_acc = accuracy_score(y_test, y_pred)\n",
     "    \n",
     "    y_pred = rfc.predict(X_train)\n",
-    "    probs = rfc.predict_proba(X_train)\n",
     "    train_acc = accuracy_score(y_train, y_pred)\n",
     "\n",
     "    print(train_acc, val_acc)\n",
@@ -198,7 +191,7 @@
     "    })\n",
     "\n",
     "# Start sweep job.\n",
-    "wandb.agent(sweep_id, function=main, count=4)"
+    "wandb.agent(sweep_id, function=main)"
    ]
   },
   {
