--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "from deep_translator import GoogleTranslator\n",
     "import re \n",
     "from math import isnan\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "pd.set_option(\"display.max_colwidth\", None)\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,18 +1033,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     " \n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    list(df.curie_similarity.values),\n",
-    "    df.type,\n",
-    "    test_size = 0.2,\n",
-    "    random_state=42\n",
-    ")"
+    "features = list(df.curie_similarity.values)\n",
+    "labels = df.type\n",
+    "# at least xgboost cannot deal with string labels\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(labels)\n",
+    "labels = label_encoder.transform(labels)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.1, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "from deep_translator import GoogleTranslator\n",
+    "import re \n",
+    "from math import isnan\n",
+    "import wandb\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "# utilities\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "pd.set_option(\"display.max_colwidth\", None)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_seq_items', None)\n",
+    "\n",
+    "df = pd.read_csv('data/train_curie.csv', index_col='id', dtype={'type': str})\n",
+    "df['curie_similarity'] = df.curie_similarity.apply(eval).apply(np.array)\n",
+    "print('eval')\n",
+    "\n",
+    "features = list(df.curie_similarity.values)\n",
+    "labels = df.type\n",
+    "# at least xgboost cannot deal with string labels\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(labels)\n",
+    "labels = label_encoder.transform(labels)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.1, random_state=0)\n",
+    "\n",
+    "bst = XGBClassifier(random_state=0)\n",
+    "print('run')\n",
+    "# fit model\n",
+    "bst.fit(X_train, y_train)"
    ]
   },
   {
