source back to text and split

--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,10 @@
     "combined_data_translated = pd.read_csv('data/combined_data_translated.csv', index_col='id', dtype={'type': str})\n",
     "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})\n",
     "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
+    "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
     "text = pd.read_csv('data/text.csv', index_col='id', dtype={'type': str})\n",
-    "babbage = pd.read_csv('data/embedded_1k_reviews.csv', index_col='id', dtype={'type': str})\n",
-    "curie = pd.read_csv('data/curie.csv', dtype={'type': str})"
+    "#babbage = pd.read_csv('data/embedded_1k_reviews.csv', index_col='id', dtype={'type': str})\n",
+    "#curie = pd.read_csv('data/curie.csv', dtype={'type': str})"
    ]
   },
   {
@@ -324,11 +325,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = text.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "photo                                           2024\n",
+       "photo negative                                  1411\n",
+       "archaeological find                              789\n",
+       "design/drawing/sketch                            783\n",
+       "poster                                           593\n",
+       "plan                                             551\n",
+       "book                                             523\n",
+       "letter                                           483\n",
+       "manuscript                                       446\n",
+       "document                                         250\n",
+       "graphics                                         224\n",
+       "music sheet                                      208\n",
+       "seal/imprint                                     196\n",
+       "coin                                             192\n",
+       "script, song/vocal music                         189\n",
+       "digital image                                    187\n",
+       "postcard                                         126\n",
+       "small print                                      102\n",
+       "magazines                                        102\n",
+       "medal                                             88\n",
+       "audio recording                                   70\n",
+       "manuscript, musical composition                   63\n",
+       "invitation                                        63\n",
+       "slide                                             61\n",
+       "newspaper                                         52\n",
+       "drawing                                           49\n",
+       "telegram                                          46\n",
+       "label/sign                                        43\n",
+       "photo, postcard                                   43\n",
+       "calendar                                          42\n",
+       "caricature                                        36\n",
+       "letter of honor/honorary address                  31\n",
+       "musical instrument                                29\n",
+       "photographic material                             29\n",
+       "seal                                              27\n",
+       "dish/vessel                                       26\n",
+       "album                                             24\n",
+       "country                                           22\n",
+       "printed notes                                     21\n",
+       "suit                                              20\n",
+       "jewel                                             18\n",
+       "crate/box                                         16\n",
+       "sheet/linen                                       16\n",
+       "manuscript, sheet music                           16\n",
+       "paper                                             15\n",
+       "sculpture                                         15\n",
+       "notes                                             14\n",
+       "folder/booklet                                    13\n",
+       "tape/ribbon                                       13\n",
+       "bag                                               11\n",
+       "packaging                                         11\n",
+       "letter, postcard                                  10\n",
+       "certificate                                        8\n",
+       "doll                                               7\n",
+       "photographic negative, photographic negative       3\n",
+       "Name: type, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.type.value_counts()"
    ]
   },
   {
@@ -357,43 +433,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['medal', 'photo', 'photo negative', 'letter', 'coin', 'label/sign',\n",
-       "       'script, song/vocal music', 'music sheet', 'slide',\n",
-       "       'archaeological find', 'book', 'plan', 'postcard', 'seal/imprint',\n",
-       "       'poster', 'design/drawing/sketch', 'audio recording', 'manuscript',\n",
-       "       'document', 'caricature', 'graphics', 'telegram',\n",
-       "       'manuscript, musical composition', 'notes', 'small print',\n",
-       "       'invitation', 'packaging', 'paper', 'manuscript, sheet music',\n",
-       "       'magazines', 'album', 'country', 'digital image',\n",
-       "       'photo, postcard', 'photographic material', 'drawing', 'crate/box',\n",
-       "       'letter of honor/honorary address', 'calendar', 'tape/ribbon',\n",
-       "       'bag', 'newspaper', 'dish/vessel', 'musical instrument',\n",
-       "       'letter, postcard', 'sculpture', 'printed notes', 'seal', 'suit',\n",
-       "       'certificate', 'sheet/linen', 'folder/booklet', 'jewel', 'doll',\n",
-       "       'photographic negative, photographic negative'], dtype=object)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "types = data.type.unique()\n",
     "# remove nan\n",
     "types = types[:-1]\n",
-    "types"
+    "types\n",
+    "# categorize types\n",
+    "types = ['photo', 'photo negative', 'photographic negative, photographic negative', 'photographic material','digital image',\\\n",
+    "'archaeological find',\\\n",
+    "'graphics', 'drawing', 'design/drawing/sketch','caricature','slide',\\\n",
+    "'poster','plan', 'paper','notes', 'document', 'certificate',\\\n",
+    "'medal', 'coin', 'label/sign',\\\n",
+    "'manuscript','script, song/vocal music', 'music sheet', 'musical instrument', 'manuscript, musical composition', 'manuscript, sheet music',\\\n",
+    "'postcard', 'photo, postcard', 'letter, postcard',\\\n",
+    "'letter','letter of honor/honorary address',\\\n",
+    "       'seal', 'seal/imprint',\\\n",
+    "        'printed notes', 'small print',\\\n",
+    "        'packaging', 'crate/box',\\\n",
+    "        'audio recording', 'telegram',\\\n",
+    "       'invitation',  'calendar',\\\n",
+    "       'book','magazines', 'album', 'newspaper', 'folder/booklet',\\\n",
+    "       'country',\\\n",
+    "       'bag', 'suit', 'doll', 'sheet/linen', 'dish/vessel','jewel', 'tape/ribbon',\\\n",
+    "       'sculpture']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,15 +472,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "multiple types in text - one type in text - one type and true type in text\n",
-      "483 1642 954\n"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text_features</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>232170</th>\n",
+       "      <td>Kuno Areng, Bremerhaven Festwoche medal    Festwoche - Breemenhaven KUTTER ASTARTE -SCHIFFERGILDE BREMENHAVEN E.V.</td>\n",
+       "      <td>medal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2251378</th>\n",
+       "      <td>Photo-Villem Kapp, photo with dedication to Armilde M, 1937   Photos from the collection of Villem Kapi and Juhan Aavik\\ndesse, purchased in 2013</td>\n",
+       "      <td>photo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4085096</th>\n",
+       "      <td>Metspart, Youth Theater, 1969, in parts: Hedvig - Mari Lill, Gina - Silvia Laidla    TB080321</td>\n",
+       "      <td>photo negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2697904</th>\n",
+       "      <td>Letter: Folk musicians: Violin: Jüri Saal: Letter to A. Pulst: 16.02.1936   Folk instrumentalists Mo238</td>\n",
+       "      <td>letter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2521183</th>\n",
+       "      <td>killing    treasures in a metal container</td>\n",
+       "      <td>coin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                             text_features  \\\n",
+       "id                                                                                                                                                           \n",
+       "232170                                  Kuno Areng, Bremerhaven Festwoche medal    Festwoche - Breemenhaven KUTTER ASTARTE -SCHIFFERGILDE BREMENHAVEN E.V.   \n",
+       "2251378  Photo-Villem Kapp, photo with dedication to Armilde M, 1937   Photos from the collection of Villem Kapi and Juhan Aavik\\ndesse, purchased in 2013   \n",
+       "4085096                                                      Metspart, Youth Theater, 1969, in parts: Hedvig - Mari Lill, Gina - Silvia Laidla    TB080321   \n",
+       "2697904                                            Letter: Folk musicians: Violin: Jüri Saal: Letter to A. Pulst: 16.02.1936   Folk instrumentalists Mo238   \n",
+       "2521183                                                                                                          killing    treasures in a metal container   \n",
+       "\n",
+       "                   type  \n",
+       "id                       \n",
+       "232170            medal  \n",
+       "2251378           photo  \n",
+       "4085096  photo negative  \n",
+       "2697904          letter  \n",
+       "2521183            coin  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'source'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/till/projects/uni/data science/museum_item_classification/nlp.ipynb Cell 28\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m true_counter \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, item \u001b[39min\u001b[39;00m data\u001b[39m.\u001b[39miterrows():\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mif\u001b[39;00m item\u001b[39m.\u001b[39;49msource \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         local_counter \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         pred \u001b[39m=\u001b[39m []\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/generic.py:5907\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5900\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   5901\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[1;32m   5902\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[1;32m   5903\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[1;32m   5904\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5905\u001b[0m ):\n\u001b[1;32m   5906\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[0;32m-> 5907\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'source'"
      ]
     }
    ],
@@ -1015,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
